# AOC2020

haskell/: README.md  aoc2020.cabal  package.yaml
haskell/problems/: day1.txt  day2.txt  day3.txt  day4.txt  day5.txt  day7.txt  day8.txt  day9.txt
haskell/src/: Day1.hs  Day10.hs  Day11.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Main.hs
python/: day1.py  day2.py  day3.py
rust/: Cargo.toml  LICENSE  README.md
rust/src/: lib.rs
